--- a/style.css
+++ b/style.css
@@ -1376,6 +1376,93 @@ object {
 	padding-left: 1px;
 }
 
+
+
+.jesse-faden {
+  color: #000;
+  opacity: 0.15;
+  font-weight: 800;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+.card.icon-darky .card-icon {
+	background: #191a1b;
+	text-align: center;
+	position: absolute;
+	top: -18px;
+	left: 20px;
+	min-width: 64px;
+	padding: 10px;
+	color: #fff;
+	border-radius: 3px;
+}
+
+.card.icon-darky .card-parts {
+	margin-top: 30px;
+	padding-left: 1px;
+}
+
+/* scrolling images */
+
+.scroll-box {
+  position: relative;
+	height: 300px;
+	overflow: hidden;
+	margin-bottom: 25px;
+	border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.12);
+  transition: all 0.5s ease;
+}
+
+.scroll-box:hover {
+	box-shadow: 0 5px 15px rgba(0,0,0,0.22);
+	transform: scale(1.1);
+	z-index: 10;
+}
+
+.scroll-box .scroll-image {
+	height: 300px;
+	overflow: scroll;
+	overflow-x: hidden;
+	width: calc( 100% + 20px );
+}
+
+.scroll-box .scroll-overlay {
+  opacity: 0;
+	background: #191a1b;
+  color: #fff;
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.5);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 5px;
+  transition: all 1s ease;
+  pointer-events: none;
+}
+
+.scroll-box:hover .scroll-overlay {
+  opacity: 0.75;
+}
+
+.scroll-box .scroll-overlay .icon {
+	font-size: 22px;
+  line-height: 1;
+}
+
+.scroll-box .scroll-overlay h6 {
+	font-size: 11px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+
 /*---------------------------
 ## Responsive
 ---------------------------*/
